Grease Pencil Stroke on Stroke Placement and Viewport Display Front #60051

Closed
opened 2019-01-02 01:54:12 +01:00 by Hannes Neumann · 7 comments

System Information
Operating system:
Window 8.1
Graphics card:
gtx 1070
Blender Version
Broken:
(example: 2.80 Beta)
(example: 2.80, 4d795cee49, blender2.8, 2018-12-31,)
Worked: (optional)

Short description of error
Grease Pencil stroke on stroke placement won't work when viewport display is switched to front
Exact steps for others to reproduce the error
Add a grease pencil object, make a stroke , switch display to front, switch placement to stroke, make a stroke strange z displacement occurs.

**System Information** Operating system: Window 8.1 Graphics card: gtx 1070 **Blender Version** Broken: (example: 2.80 Beta) (example: 2.80, 4d795cee4938, blender2.8, 2018-12-31,) Worked: (optional) **Short description of error** Grease Pencil stroke on stroke placement won't work when viewport display is switched to front **Exact steps for others to reproduce the error** Add a grease pencil object, make a stroke , switch display to front, switch placement to stroke, make a stroke strange z displacement occurs.
Author

Added subscriber: @Hansel2k

Added subscriber: @Hansel2k

Added subscriber: @antoniov

Added subscriber: @antoniov

I cannot reproduce it, maybe I'm missing something .

I cannot reproduce it, maybe I'm missing something .
Author

ok, my description was not good. i don't mean front view i mean greasepencils settings/viewport display settings depth ordering has to be set to front while in stroke placement: stroke mode.

ok, my description was not good. i don't mean front view i mean greasepencils settings/viewport display settings depth ordering has to be set to front while in stroke placement: stroke mode.
Antonio Vazquez self-assigned this 2019-01-02 17:14:47 +01:00

Ah ok, I can reproduce now.

Ah ok, I can reproduce now.

This issue was referenced by 0ee97bd5c4

This issue was referenced by 0ee97bd5c42bf64021819c8571f4e9346abb23b9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60051
No description provided.