Fix T60051: Wrong stroke projection when viewmode set to Front

As the z-depth is calculated using the internal drawing, if we use the front mode the z-depth is wrong. The Front or Back mode must be used only for display, but not for calculation.